<resources>
    <string name="app_name">Calculator</string>
    <string name="history">History</string>
    <string name="choosePtheme">Choose theme</string>
    <string name="about">About</string>
    <string name="equals">=</string>
    <string name="decimal_point">.</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="add">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="subtract">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="divide">÷</string>
    <string name="sqr_root">√</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="calc_cancel">C</string>
    <string name="percent">%</string>
    <string name="negate">±</string>

    <string name="Choose_theme">Choose theme</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>


</resources>